--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,11 @@ environment:
 
 dependencies:
   url_launcher: any
+  http: ^0.11.3
+  meta: ^1.0.4
+  built_collection: any
+  built_value: any
+
   flutter:
     sdk: flutter
 
@@ -31,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: ^1.12.2
+  built_value_generator: any
+  dart_style: any
+
   flutter_test:
     sdk: flutter
 
